--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
-    "ionic": "^5.4.16",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "ionic": "^4.1.2",
     "mapbox-gl": "^2.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
