--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/geolocation": "^6.1.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.1.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic-native/geolocation": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "cordova-plugin-geolocation": "^4.1.0",
     "ionic": "^4.1.2",
     "mapbox-gl": "^2.10.0",
     "rxjs": "~6.6.0",
