--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/core": "^6.1.0",
     "@awesome-cordova-plugins/geolocation": "^6.1.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.1.0",
