--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "axios": "^1.1.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "ionic": "^4.1.2",
     "mapbox-gl": "^2.10.0",
