--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/core": "^6.1.0",
     "@awesome-cordova-plugins/geolocation": "^6.1.0",
+    "@capacitor/android": "^4.6.1",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.1.0",
     "@capacitor/haptics": "4.0.1",
@@ -37,6 +38,7 @@
     "mapbox-gl": "^2.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
